WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156987
AX: Crash at -[WebAccessibilityObjectWrapper accessibilityAttributeValue:] + 4391
https://bugs.webkit.org/show_bug.cgi?id=156987
Summary
AX: Crash at -[WebAccessibilityObjectWrapper accessibilityAttributeValue:] + ...
Nan Wang
Reported
2016-04-25 12:13:30 PDT
Crash when asking for the slider indicator's value if the parent slider is null. <
rdar://problem/25881658
>
Attachments
Initial patch
(4.34 KB, patch)
2016-04-25 12:21 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(4.08 KB, patch)
2016-04-25 13:55 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2016-04-25 12:21:34 PDT
Created
attachment 277266
[details]
Initial patch
chris fleizach
Comment 2
2016-04-25 13:43:50 PDT
Comment on
attachment 277266
[details]
Initial patch View in context:
https://bugs.webkit.org/attachment.cgi?id=277266&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:2751 > + return !m_object->parentObject() ? nullptr : [NSNumber numberWithFloat:m_object->parentObject()->valueForRange()];
can we instead check earlier than this if the object is detachedFromParent() then that will take care of this and other cases
Nan Wang
Comment 3
2016-04-25 13:55:40 PDT
Created
attachment 277276
[details]
patch review comments.
WebKit Commit Bot
Comment 4
2016-04-25 15:40:19 PDT
Comment on
attachment 277276
[details]
patch Clearing flags on attachment: 277276 Committed
r200054
: <
http://trac.webkit.org/changeset/200054
>
WebKit Commit Bot
Comment 5
2016-04-25 15:40:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug